# vex-controller

./: .gitignore  99-vex-controller.rules  Cargo.toml  README.md  flake.nix  install.ps1  install.sh  vex-controller.service
src/: crc.rs  device_monitor.rs  gamepad.rs  main.rs  protocol.rs  serial.rs  transport.rs
