[package]
name = "vex-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2"
anyhow = "1.0"
byteorder = "1.4"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
vigem-client = "0.1"
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_DeviceAndDriverInstallation",
] }

